# clean-architecture-with-python

./: .pre-commit-config.yaml  .pylint  README.md  mypy.ini  pyproject.toml
src/data/find_pet/: find.py
src/data/find_user/: find.py
src/data/interfaces/: pet_repository_interface.py  user_repository_interface.py
src/data/register_user/: register.py
src/domain/models/: pets.py  users.py
src/domain/use_cases/: find_pet.py  find_user.py  register_user.py
src/infra/config/: db_config.py
src/infra/entities/: petmodel.py  pets.py  user.py  usermodel.py  users.py
src/infra/repository/: pet_repository.py  user_repository.py
tests/data/find_pet/: test_find.py
tests/data/find_user/: find.py  test_find.py
tests/data/register_user/: register.py
tests/helpers/repository/: pet.py  user.py
tests/infra/repository/: test_pet_repository.py  test_user_repository.py
