[tool.poetry]
name = "clean-architecture-with-python"
version = "0.1.0"
description = ""
authors = ["Gluz <brunogluszczukjobs@gmail.com>"]
readme = "README.md"
packages = [{include = "clean_architecture_with_python"}]

[tool.poetry.dependencies]
python = "3.10.3"
pylint = "^2.15.10"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
